// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    className={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#b7b7b7",
            "borderRadius": 3.5,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 39.375,
            "width": "70%",
          },
          Array [
            Object {},
            Array [
              Object {},
              undefined,
            ],
          ],
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
              "fontSize": 14,
            },
            Array [
              Object {
                "color": "#007ac9",
                "fontSize": 14,
                "fontWeight": "500",
                "textAlign": "center",
              },
              undefined,
            ],
          ],
        ]
      }
    >
      Default Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button primary 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    className={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "backgroundColor": "#007ac9",
            "borderColor": "#007ac9",
            "borderRadius": 35,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 43.75,
            "width": "70%",
          },
          Array [
            Object {},
            Array [
              Object {},
              undefined,
            ],
          ],
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
              "fontSize": 14,
            },
            Array [
              Object {
                "color": "#ffffff",
                "fontSize": 15.75,
                "fontWeight": "500",
                "textAlign": "center",
              },
              undefined,
            ],
          ],
        ]
      }
    >
      Primary Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button secondary 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    className={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Array [
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#848484",
            "borderRadius": 3.5,
            "borderStyle": "solid",
            "borderWidth": 1,
            "height": 39.375,
            "width": "70%",
          },
          Array [
            Object {},
            Array [
              Object {},
              undefined,
            ],
          ],
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {},
          Array [
            Object {
              "fontFamily": "Gotham Rounded SSm A, Gotham Rounded SSm B",
              "fontSize": 14,
            },
            Array [
              Object {
                "color": "#848484",
                "fontSize": 14,
                "fontWeight": "500",
                "textAlign": "center",
              },
              undefined,
            ],
          ],
        ]
      }
    >
      Secondary Button
    </Text>
  </View>
</View>
`;
